fix for feign and jparepository